--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="2.html">한국어를 영어로 읽기</a></li>
   </ol>
   <h2>영어를 한국어로, 한국어를 영어로 읽기</h2>
-  <p>살다 보면 누구나 한번씩 여행을 떠나고 싶을 때가 있죠. 여행을 가서 영어를 잘 못 읽으시는 분들도 발음만 할 줄 아신다면 영어를 읽으실 수 있습니다.(물론 해석은 본인이..)
+  <p>살다 보면 누구나 한번씩 여행을 떠나고 싶을 때가 있죠. 여행을 가서 영어를 잘 못 읽으시는 분들도 발음만 할 줄 아신다면 영어를 읽으실 수 있습니다.
   </p><p>또 반대로 한국에 온 외국인이 한글을 영어로 읽고 싶을 때, 쉽게 바꿔 읽을 수 있습니다.
   </p>
 </body>
