--- a/1.html
+++ b/1.html
@@ -13,30 +13,31 @@
   <h2>영어를 한국어로 읽기</h2>
   <p><strong>영어</strong>를 <u>한국어</u>로 쉽게 읽으려면 어떻게 할까요?
   </p><p style="margin-top:45px;">먼저 각 영어에 맞는 한글을 찾습니다.
-    <ui>
-      ㄱ - g(k)
-      ㄴ - n
-      ㄷ - d
-      ㄹ - l(r)
-      ㅁ - m
-      ㅂ - b
-      ㅅ - s(th)
-      ㅇ - 모음이 가장 처음 나올 때
-      ㅈ - j(z)
-      ㅊ - ch
-      ㅋ - k(c)
-      ㅌ - t
-      ㅍ - p(f)
-      ㅎ - h
-      ㅏ - a
-      ㅑ - ya
-      ㅓ - eo(u)
-      ㅕ - yeo
-      ㅗ - o
-      ㅛ - yo
-      ㅜ - oo(u)
-      ㅠ - yoo(u)
-      ㅡ - eu, 자음으로 끝날 때
+  <br> 
+  <ui>
+      ㄱ - g(k), 
+      ㄴ - n, 
+      ㄷ - d, 
+      ㄹ - l(r), 
+      ㅁ - m, 
+      ㅂ - b, 
+      ㅅ - s(th), 
+      ㅇ - 모음이 가장 처음 나올 때, 
+      ㅈ - j(z), 
+      ㅊ - ch, 
+      ㅋ - k(c), 
+      ㅌ - t, 
+      ㅍ - p(f), 
+      ㅎ - h, 
+      ㅏ - a, 
+      ㅑ - ya, 
+      ㅓ - eo(u), 
+      ㅕ - yeo, 
+      ㅗ - o, 
+      ㅛ - yo, 
+      ㅜ - oo(u), 
+      ㅠ - yoo(u), 
+      ㅡ - eu, 자음으로 끝날 때, 
       ㅣ - i
     </ui>
 </p><p style="margin-top:45px;">
