--- a/2.html
+++ b/2.html
@@ -13,31 +13,32 @@
   <h2>한국어를 영어로 읽기/h2>
   <p><strong>한국어</strong>를 <u>영어</u>로 쉽게 읽으려면 어떻게 할까요?
   </p><p style="margin-top:45px;">일단 각 자음에 맞는 영어 글자를 찾습니다.
+    <br>
     <ui>
-      ㄱ - g(k)
-      ㄴ - n
-      ㄷ - d
-      ㄹ - l(r)
-      ㅁ - m
-      ㅂ - b
-      ㅅ - s(th)
-      ㅇ - (발음 X, 바로 모음 발음)
-      ㅈ - j(z)
-      ㅊ - ch
-      ㅋ - k(c)
-      ㅌ - t
-      ㅍ - p(f)
-      ㅎ - h
-      ㅏ - a
-      ㅑ - ya
-      ㅓ - eo(u)
-      ㅕ - yeo
-      ㅗ - o
-      ㅛ - yo
-      ㅜ - oo(u)
-      ㅠ - yoo(u)
-      ㅡ - eu
-      ㅣ - i
+      ㄱ - g(k), 
+      ㄴ - n, 
+      ㄷ - d, 
+      ㄹ - l(r), 
+      ㅁ - m, 
+      ㅂ - b, 
+      ㅅ - s(th), 
+      ㅇ - (발음 X, 바로 모음 발음), 
+      ㅈ - j(z), 
+      ㅊ - ch, 
+      ㅋ - k(c), 
+      ㅌ - t, 
+      ㅍ - p(f), 
+      ㅎ - h, 
+      ㅏ - a, 
+      ㅑ - ya, 
+      ㅓ - eo(u), 
+      ㅕ - yeo, 
+      ㅗ - o, 
+      ㅛ - yo, 
+      ㅜ - oo(u), 
+      ㅠ - yoo(u), 
+      ㅡ - eu, 
+      ㅣ - i, 
     </ui>
   </p><p style="margin-top:45px;">
   그 후 한글을 풀어 씁니다. 한글 -> ㅎ ㅏ ㄴ ㄱ ㅡ ㄹ 식으로요. 마지막으로 각 자음과 모음에 맞는 영어 글자를 넣어 주시면 끝입니다.
