--- a/2.html
+++ b/2.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">메인</a></h1>
   <ol>
     <li><a href="1.html">영어를 한국어로 읽기</a></li>
     <li><a href="2.html">한국어를 영어로 읽기</a></li>
   </ol>
-  <h2>한국어를 영어로 읽기/h2>
+  <h2>한국어를 영어로 읽기</h2>
   <p><strong>한국어</strong>를 <u>영어</u>로 쉽게 읽으려면 어떻게 할까요?
   </p><p style="margin-top:45px;">일단 각 자음에 맞는 영어 글자를 찾습니다.
     <br>
